--- a/Third Departament/Google Maps Platform y el SDK de Places/gradle/wrapper/gradle-wrapper.properties
+++ b/Third Departament/Google Maps Platform y el SDK de Places/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Apr 27 19:46:35 PDT 2019
+#Sun Jun 23 17:44:36 CST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.1.1-all.zip
